# cognitive-mental-math

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  IMPROVEMENTS_README.md  IMPROVEMENT_CHECKLIST.md  IMPROVEMENT_SUMMARY.md  Makefile  PROJECT_ANALYSIS.md  PROMPTS.md  README.md  install-hooks.sh  pyproject.toml
.github/: README.md  README2.md
.github/workflows/: ci.yml
backlog/: 01-repeating-failed-questions.md  02-increase-level-of-questions.md  03-create-deck-plan.md  03-create-deck.md  04-spaced-repetition-plan.md  04-spaced-repetition.md
data/: sample.db
hooks/: README.md  pre-commit  pre-push
migrations/: 001_initial_schema.sql  002_add_deck_id_columns.sql  003_create_indexes.sql  V1__initial_schema.sql
src/: answer_evaluator_service.rs  cli.rs  database.rs  database_factory.rs  date_provider.rs  deck.rs  gui.rs  lib.rs  main.rs  operations.rs  quiz_service.rs  row_factories.rs  spaced_repetition.rs  time_format.rs
src/database/: answers.rs  connection.rs  decks.rs  mod.rs  operations.rs  review_items.rs
src/database/analytics/: accuracy.rs  mod.rs  streak.rs  time_statistics.rs
tests/: e2e_tests.rs  integration_tests.rs  performance_stats_e2e_tests.rs  pre_commit_setup_tests.rs
tests/expected/: performance_stats_output_nocolor.txt
tests/snapshots/: performance_stats_e2e_tests__performance_stats_color_output.snap
