[package]
name = "memory_practice"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
eframe = "0.29"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
refinery = { version = "0.8", features = ["rusqlite"] }
rand = "0.8"
chrono = "0.4"
sra = "0.1"
log = "0.4"
env_logger = "0.11"
colored = "2.0"

[dev-dependencies]
insta = { version = "1.40", features = ["filters"] }
